# railway-one-slot

./: .dockerignore  .gitignore  Dockerfile.one-slot  README.md  railway.toml
docker/: start-gateway-worker.sh
gateway/: Cargo.toml
gateway/src/: main.rs
gateway/static/: dashboard.html
worker/: Cargo.toml
worker/src/: main.rs
