[package]
name = "context-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
bytes = "1"
dashmap = "6"
futures-util = "0.3"
hex = "0.4"
mimalloc = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
