[package]
name = "context-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
bytes = "1"
futures-util = "0.3"
mimalloc = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
