[package]
name = "context-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
bytes = "1"
ds-free-api = { path = "../..", default-features = false }
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
mimalloc = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1"
